Extract another test config